--- a/public/assets/scss/colors/_presets.scss
+++ b/public/assets/scss/colors/_presets.scss
@@ -1,8 +1,8 @@
 //All Preset color variables are here
 
  // Defult color
- $defult: #2368de;
+ $default: #0dc60f;
  //$defult: #F63854;
  
 //Current Preset Declareation
- $preset:  $defult;
+ $preset:  $default;
