--- a/public/assets/scss/_footer.scss
+++ b/public/assets/scss/_footer.scss
@@ -2,7 +2,7 @@
 .footer-area{
 	position: relative;
 	padding: 150px 0px 0px;
-	background: url(../img/footer-bg.jpg);
+	background: url(../img/footer-bg.png);
 	.footer-titel{
 		font-size: 18px;
 		color: #333333;
