--- a/public/assets/scss/colors/_presets.scss
+++ b/public/assets/scss/colors/_presets.scss
@@ -1,7 +1,7 @@
 //All Preset color variables are here
 
  // Defult color
- $default: #0dc60f;
+ $default: #129513;
  //$defult: #F63854;
  
 //Current Preset Declareation
